--- a/index.html
+++ b/index.html
@@ -21,12 +21,22 @@
             },
             animation: {
               fadeInUp: 'fadeInUp 0.6s ease-in-out forwards',
+              fadeIn: 'fadeIn 0.5s ease-in-out forwards',
               pulseSlow: 'pulse 2.5s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+              shimmer: 'shimmer 2s infinite',
             },
             keyframes: {
               fadeInUp: {
                 '0%': { opacity: '0', transform: 'translateY(20px)' },
                 '100%': { opacity: '1', transform: 'translateY(0)' },
+              },
+              fadeIn: {
+                '0%': { opacity: '0' },
+                '100%': { opacity: '1' },
+              },
+              shimmer: {
+                '0%': { transform: 'translateX(-100%)' },
+                '100%': { transform: 'translateX(100%)' },
               },
             },
           }
@@ -44,6 +54,40 @@
 }
 </script>
 <link rel="stylesheet" href="/index.css">
+<style>
+  /* Custom Scrollbar for Sidebar */
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 6px;
+  }
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background: rgba(42, 33, 83, 0.3);
+    border-radius: 10px;
+  }
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background: linear-gradient(to bottom, #d43a9a, #6c639a);
+    border-radius: 10px;
+  }
+  .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(to bottom, #e04ba8, #7c73aa);
+  }
+  
+  /* Smooth animations for nav items */
+  @keyframes fadeInUp {
+    0% {
+      opacity: 0;
+      transform: translateY(10px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  .animate-fadeInUp {
+    animation: fadeInUp 0.4s ease-out forwards;
+    opacity: 0;
+  }
+</style>
 </head>
   <body class="bg-ahava-background text-gray-300">
     <div id="root"></div>
